...
        android:layout_marginBottom="30dp"
        android:layout_weight="0"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/user_item_list_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1.5"
            android:background="@drawable/rounded_button_light"
            android:text="@string/cancel"
            android:textColor="@color/lightBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/user_item_list_confirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/user_item_list_confirm"
            android:layout_width="0dp"
...
