<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MonitoringGroupPageActivity">

    <TextView
        android:id="@+id/textView_groupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name"
        android:textSize="30sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/page_title"
        android:layout_margin="5dp"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:id="@+id/search_users"
        android:autofillHints="personName" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_users"
        android:layout_marginTop="5dp" />

</RelativeLayout>